# calnio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  notion_demo.py  pyproject.toml
alembic/: env.py
alembic/versions/: 673af4d22aca_create_users_and_oauth_accounts_tables.py  87509e5f0c39_create_syncedevents_table.py  a1b2c3d4e5f6_drop_caldav_events_table.py  e208a4ca9752_create_caldavevent_table.py  ec5668403e86_add_title_to_synced_events.py
backend/api/: oauth.py
backend/core/: config.py  db.py  logging.py  oauth.py  scheduler.py  security.py
backend/models/: caldav_event.py  oauth_account.py  synced_event.py  user.py
backend/repo/: caldav_repo.py  notion_repo.py  user_repo.py
backend/schemas/: caldav_event.py  notion_database.py  notion_page.py  synced_event.py
backend/services/: sync.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: BetaStrip.vue  FeatureGrid.vue  GetStarted.vue  GoogleButton.vue  HeroSection.vue  HowItWorks.vue  TheFooter.vue  TheNav.vue
frontend/src/composables/: useAuth.js
frontend/src/styles/: global.css
frontend/src/views/: LandingPage.vue  MeView.vue
