[project]
name = "calnio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "caldav>=3.2.1",
    "fastapi>=0.137.2",
    "icalendar>=7.1.3",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]
