[project]
name = "calnio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "caldav>=3.2.1",
    "fastapi>=0.137.2",
    "greenlet>=3.5.2",
    "icalendar>=7.1.3",
    "loguru>=0.7.3",
    "notion-client>=3.1.0",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
