[project]
name = "calnio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "authlib>=1.7.2",
    "caldav>=3.2.1",
    "fastapi>=0.137.2",
    "greenlet>=3.5.2",
    "icalendar>=7.1.3",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "notion-client>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
